--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="position-analytics" basedir="." default="compile-floorplan">
+<project name="floorplan" basedir="." default="compile-floorplan">
 	<taskdef name="jscomp" classname="com.google.javascript.jscomp.ant.CompileTask"
 	           classpath="build/closure/compiler.jar"/>
 	
